# yalla-trip

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: DEMOS.md
docs/: PROMPT_ENGINEERING.md
src/: agent.py  config.py  interfaces.py  logger.py  main.py  models.py  prompts.py  provider.py  state.py  tools.py
static/: index.html
tests/: test_agent.py  test_models.py
