[tool.poetry]
name = "yalla-trip"
version = "1.0.0"
description = "AI-powered travel assistant with natural conversation, weather integration, and trip planning"
authors = ["Ephraim Kurer"]
readme = "README.md"
license = "MIT"
keywords = ["travel", "ai", "chatbot", "llm", "ollama"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.0.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
pydantic-settings = "^2.12.0"
structlog = "^25.5.0"
aiosqlite = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
respx = "^0.22.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
